# listen

./: .env.example  .gitignore  .mise.toml  .tool-versions  README.md  pyproject.toml
old/: main.js  package-lock.json  package.json
src/listen/: clean_text.py  main.py  speech.py
src/listen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
