[project]
name = "listen"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Laluka", email = "loukajc@gmail.com"},
    {name = "Jonathan", email = "jonathan.gallon@gmail.com"},
]
dependencies = [
    "trafilatura>=1.6.1",
    "openai>=1.3.9",
    "docopt>=0.6.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
package-type = "application"

[tool.pdm.build]
includes = ["src"]

[project.scripts]
listen = "listen.main:main"
