[project]
name = "listen"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Laluka", email = "loukajc@gmail.com"},
    {name = "Jonathan", email = "jonathan.gallon@gmail.com"},
]
dependencies = [
    "openai>=1.4.0",
    "docopt>=0.6.2",
    "langchain>=0.0.350",
    "tiktoken>=0.5.2",
    "black>=23.12.0",
    "pydub>=0.25.1",
]
requires-python = ">=3.8.1,<4.0"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
package-type = "application"

[tool.pdm.build]
includes = ["src"]

[tool.pdm.dev-dependencies]
dev = [
    "ipdb>=0.13.13",
]
[project.scripts]
listen = "listen.main:main"
